Add quiz history tracking